# CICD-LLM-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.circleci/: config.yml
.github/workflows/: build.yml
rag/: app.py  chain_evals.py  chains.py  test_rag.py
tests/: test_chain_evals.py  test_chains.py  test_chains_manual.py
tests/integration/: test_chain_evals.py
tests/unit/: test_chains.py
