[tool.poetry]
name = "circleci-rag-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
anthropic = "^0.13.0"
openai = "^1.10.0"
langchain-core = "^0.1.17"
langchain = "^0.1.4"
gitpython = "^3.1.41"
chromadb = "^0.4.22"
lxml = "^5.1.0"
html2text = "^2020.1.16"
bs4 = "^0.0.2"
parea-ai = "^0.2.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
